testsuite/tests/grammar/invalid_list/invalid-astlist.lkt
import common

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <-
      ASTList[FooNode, Example, Example]+(Example("example"))
}

class Example : FooNode implements TokenNode {
}
